@@ -1,3 +1,8 @@
+2005-04-13  Raja R Harinath  <rharinath@novell.com>
+
+	* typemanager.cs (IsUnmanagedType): Restore !IsValueType check
+	removed below.
+
 2005-04-13  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* doc.cs : detect ambiguous reference to overloaded members.
